Deuxième publication fichiers

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>Jeu du pendu</h1>
-        <div class="game-container">
+        <div id="game-container">
             <div id="hangman-drawing"></div>
             <div id="word-container"></div>
             <div id="letter-buttons"></div>
